--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </div>
 <div class='header-section about text-center'>
 <div class='interests'>
-<h3>Technologist • Developer • Data Nerd • Endlessly Curious</h3>
+<h3>Technologist • Developer • Data Curator • Endlessly Curious</h3>
 </div>
 <div class='location'>
 <h2>Redding, CA</h2>
@@ -39,7 +39,7 @@
 <div class='header-section contact text-right'>
 <div class='email'>
 <h2>
-<a href='mailto:nathan@pru.design'>nathan@pru.design</a>
+<a href='mailto:nathan@pru.design' target='_blank'>nathan@pru.design</a>
 </h2>
 </div>
 <div class='phone'>
@@ -53,99 +53,231 @@
 </div>
 </section>
 <section id='about'>
+<div class='section-title'>
 <h1>About</h1>
-<a class='button' href='mailto:nathan@pru.design'>Contact Me</a>
+<a class='button' href='mailto:nathan@pru.design' target='_blank'>Contact Me</a>
+</div>
 <div class='about-copy'>
 <p>I love understanding, disecting, refining, improving, and bringing effieciency to systems. The more data the better, the bigger the problem, the more fun. I love building teams, and understanding everything. I love understanding, disecting, refining, improving, and bringing effieciency to systems. The more data the better, the bigger the problem, the more fun. I love building teams, and understanding everything. I love understanding, disecting, refining, improving, and bringing effieciency to systems. The more data the better, the bigger the problem, the more fun. I love building teams, and understanding everything.</p>
 </div>
 </section>
 <section id='work'>
+<div class='section-title'>
 <h1>Work</h1>
+</div>
 <div class='job active'>
 <div class='job-wrap'>
-<div class='main'>
+<div class='main flex'>
+<div class='toggle'>
+<span></span>
+<span></span>
+</div>
+<div class='title'>
 <h2 class='job-title'>Technology Director</h2>
 <h3 class='job-company'>Bethel Media Group</h3>
+</div>
+<div class='time'>
 <h3 class='job-dates'>2016 - Present</h3>
 </div>
+</div>
 <div class='pts'>
+<h3>Responsibilities</h3>
 <ul>
-<li>Leading a dev team consisting of product manger, UI/UX designer, business analyst, and 8 remote and local developers.</li>
-<li>Leading research and implementation of technology solutions...</li>
+<li>Leading a dev team consisting of product manger, UI/UX designer, business analyst, and 8 local and remote developers.</li>
+<li>Leading research and implementation of technology solutions with focus on user experience, sustainability, and cost efficiency.</li>
+<li>Coordinate with departments and business units on technology needs and solution.</li>
+<li>Building and managing our data pipeline for quality data collection and integrity.</li>
+<li>Managing data collection, visualization, and analysis for business intelligence, accounting, platform usage, and marketing flows & initiatives.</li>
+</ul>
+<h3>Projects</h3>
+<ul>
+<li><strong>Custom Donations Platform</strong> - <span class="small-text">Led the vision and scope for a custom donations platform which allowed our existing users to very simply donate, setup recurring donation, and manage donation history and preferences. <a href="https://www.bethel.tv/give"  taget="_blank">[&nbsp;bethel.tv/give&nbsp;]</a></span></li>
+<li><strong>Multi-Lingual Podcast Platform</strong> - <span class="small-text">Directed the administrative, design, and development of a podcast platform to support 14 languages with industry standard feeds and analytics. <a href="https://www.bethel.tv/podcasts" taget="_blank">[&nbsp;bethel.tv/podcasts&nbsp;]</a></span></li>
+<li><strong>Data Repository and Visualization</strong> - <span class="small-text">Built a data pipeline from the way our databases are structured, to our ETL, data store, and vizualization and dashboards with Tableau products.</span></li>
 </ul>
 </div>
 </div>
 </div>
 <div class='job'>
 <div class='job-wrap'>
-<div class='main'>
-<h2 class='job-title'>Lead Developer</h2>
-<h3 class='job-company'>Silverlake Design Studio</h3>
-<h3 class='job-dates'>2016 - 2017</h3>
+<div class='main flex'>
+<div class='toggle'>
+<span></span>
+<span></span>
+</div>
+<div class='title'>
+<h2 class='job-title'>Lead Developer/Owner</h2>
+<h3 class='job-company'>Pru & Drew Inc.</h3>
+</div>
+<div class='time'>
+<h3 class='job-dates'>2014 - Present</h3>
+</div>
 </div>
 <div class='pts'>
 <ul>
-<li>Leading a dev team consisting of product manger, UI/UX designer, business analyst, and 8 remote and local developers.</li>
-<li>Leading research and implementation of technology solutions...</li>
+<li>Building a media company called The Beauty Project which includes the website, producing photography and video, and planning the brand vision, mission and campaigns. <a href="https://thebeautyproject.is" taget="_blank">[&nbsp;thebeautyproject.is&nbsp;]</a></li>
+<li>Consulting businesses on technology solutions for their online presence, e-commerce, and internal systems to run and manage their business.</li>
+<li>Building websites and managing SEO for businesses including blogging, ecommerce, subscription, POS, and digital delivery tools.</li>
+<li>Creating media including photography & editing, video directing and editing, logo design & user interface design, and podcast production.</li>
 </ul>
+<h3>Projects</h3>
+<ul>
+<li><strong>Technology Consulting</strong> - <span class="small-text">Helping organizations find ways to increase their potential with the resources at hand is one of my passions. More is always possible with what's in front of you. Consulting has given me the opportunity to advise on building complex solutions with simple tools.</span></li>
+<li><strong>Video Production</strong> - <span class="small-text">Thgrough 12+ years of video experience I have told people and organization's stories through documentary shorts, animated promo videos, and live production.</span></li>
+<li><strong>Website Development</strong> - <span class="small-text">Offering affordable, flexible, and fully custom websites to new companies, or companies trying to refresh their identity. Producing quality that is attainable for any business has been very rewarding. <a href="https://www.homeagainpinebluff.org" taget="_blank">[&nbsp;homeagainpinebluff.org&nbsp;]</a></span></li>
+</ul>
+</div>
 </div>
 </div>
 <div class='job'>
 <div class='job-wrap'>
-<div class='main'>
+<div class='main flex'>
+<div class='toggle'>
+<span></span>
+<span></span>
+</div>
+<div class='title'>
 <h2 class='job-title'>Lead Developer</h2>
 <h3 class='job-company'>New Life Church</h3>
+</div>
+<div class='time'>
 <h3 class='job-dates'>2008 - 2016</h3>
+</div>
 </div>
 <div class='pts'>
 <ul>
-<li>Leading a dev team consisting of product manger, UI/UX designer, business analyst, and 8 remote and local developers.</li>
-<li>Leading research and implementation of technology solutions...</li>
+<li>Developed web and app based resources to facilitate the operations and membership needs for 12 locations across the state.</li>
+<li>Researched and implemented live streaming solutions for services, events, and conferences.</li>
+<li>Scoped, implemented, and trained hundreds of staff and volunteers on internal database management, operations, and integrity. I oversaw the inital data migration from the legacy tool which involved very detailed accounting data integrity needs.</li>
+<li>Developed and managed podcast platform for distributing weekly audio content with coordinated reading content and group membership to facilitate teaching.</li>
 </ul>
-</div>
+<h3>Projects</h3>
+<ul>
+<li><strong>NLC App</strong> - <span class="small-text">Built an app to deliver video, podcast, event info, event registration, articles, and live streaming for iOS, Android, and AppleTV using an app building tool connected to our site's CMS via JSON APIs. [ No longer available. ]</span></li>
+<li><strong>Internal Database</strong> - <span class="small-text">This was a huge undertaking of migrating years of memebership and donation data from a legacy system, and training staff and volunteers across many geographic locations on usage and reporting.</span></li>
+<li><strong>Media RAID</strong> - <span class="small-text">Through my experience with video editing, I oversaw the purchase and implementation of a large RAID for media storage and video editing which included planning the network segmentation, physical network wiring and 10Gbe hardware, permissions, and organization of the content. This build facilitated the work of 4 video editors, 3 graphic designers, and many support staff.</span></li>
+</ul>
 </div>
 </div>
 </div>
 </section>
 <section id='experience'>
+<div class='section-title'>
 <h1>Experience</h1>
-<p>The following are areas of experience and understanding in these areas...</p>
+<p>Thse are areas I have invested in learning through work experience, research, and general curiosity and hobbying.</p>
+</div>
+<div class='grid'>
 <div class='experience'>
-<div class='title'>Leader</div>
+<div class='main flex'>
+<div class='toggle'>
+<span></span>
+<span></span>
+</div>
+<h2 class='title'>Leader</h2>
+</div>
 <ul>
-<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+<li>Through my broad media and development experience, I am able to lead many areas & skillsets with high rapport.</li>
+<li>I am skilled at teaching, traning, and sharing my experiences.</li>
+<li>I enjoy finding the balance and priorities needed to succeed in different projects.</li>
+<li>Creating a culture of enthusiasm and dreaming alongside excellence and responsibility.</li>
+<li>Hiring and vetting candidates for developer, creative, and administrative roles.</li>
 </ul>
 </div>
 <div class='experience'>
-<div class='title'>Developer</div>
+<div class='main flex'>
+<div class='toggle'>
+<span></span>
+<span></span>
+</div>
+<h2 class='title'>Developer</h2>
+</div>
 <ul>
-<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+<li>I started with front-end development & PHP 8 years ago.</li>
+<li>This experience allowed me to work with APIs, data modeling, and diverse platforms & integrations.</li>
+<li>I love solving problems and finding the most I can get out of the data and tools available.</li>
+<li>Building out customer management systems, and marketing workflows for over a million contacts.</li>
 </ul>
 </div>
 <div class='experience'>
-<div class='title'>Data</div>
+<div class='main flex'>
+<div class='toggle'>
+<span></span>
+<span></span>
+</div>
+<h2 class='title'>Data</h2>
+</div>
 <ul>
-<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
-<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+<li>Managing data pipeline with ETL + Google Big Query.</li>
+<li>Doing data cleaning & validation with Trifacta, Tableau Prep, & Tableau Desktop.</li>
+<li>Data reporting, analysis, and visualization with Tableau Desktop.</li>
+<li>Working on data migration and database structuring projects for large applications.</li>
+<li>Managing a contact database of over 50 million contacts.</li>
 </ul>
+</div>
+<div class='experience'>
+<div class='main flex'>
+<div class='toggle'>
+<span></span>
+<span></span>
+</div>
+<h2 class='title'>Technology</h2>
+</div>
+<ul>
+<li>Deep understanding of internet technology and the way content is built and delivered.</li>
+<li>Understanding of the browser policy, web page interpretation, and security protocols.</li>
+<li>Understanding of the hardware, protocols, and mitigations to attacks the internet runs on.</li>
+<li>Love for knowing how computers work down to the hardware.</li>
+<li>Experience with software/hardware virtualization.</li>
+<li>CDNs, conatiners, streaming, analytics, and security.</li>
+</ul>
+</div>
+<div class='experience'>
+<div class='main flex'>
+<div class='toggle'>
+<span></span>
+<span></span>
+</div>
+<h2 class='title'>Media</h2>
+</div>
+<ul>
+<li>12+ years of video filming and editing.</li>
+<li>Color correction experience with RAW, PRORES, and H.264 video.</li>
+<li>Steadicam, crane operation, drone piloting.</li>
+<li>RAW video workflow with Blackmagic, Davinci Resolve, FCP, & Adobe Creative Suite.</li>
+<li>Motion Graphics animation with Adobe After Effects & Cinema4D.</li>
+<li>Phtography and Lightroom photo editing.</li>
+<li>Photoshop, Illustrator, InDesign for layout and logo design.</li>
+<li>Sketch and Figma for UI/UX wireframing and design.</li>
+</ul>
+</div>
+<div class='experience'>
+<div class='main flex'>
+<div class='toggle'>
+<span></span>
+<span></span>
+</div>
+<h2 class='title'>Security/Infosec</h2>
+</div>
+<ul>
+<li>10+ years of researching and studying computer and network security.</li>
+<li>Information security and data encryption at rest, in transit, or for authentication.</li>
+<li>User authentication, database technology, and authentication methods including 2FA, OAth, SQRL, etc.</li>
+<li>Secure hashing and encryption protocols and best practices.</li>
+<li>Intrusion prevention, training, detecting, and hardening.</li>
+<li>Security industry news, standards, and technology.</li>
+</ul>
+</div>
 </div>
 </section>
-<section id='contact'>
-<a class='button large' href='mailto:nathan@pru.design'>Contact Me</a>
-</section>
-<section id='projects'>
-<h1>Projects</h1>
+<section class='flex' id='contact'>
+<a class='button large' href='mailto:nathan@pru.design' target='_blank'>Contact Me</a>
 </section>
 <section id='references'>
+<div class='section-title'>
 <h1>References</h1>
 <p>Available upon request.</p>
+</div>
 </section>
 </body>
-<script src='js/plugins.js'></script>
-<script src='js/main.js'></script>
+<script src='js/app.js'></script>
 </html>
