--- a/index.html
+++ b/index.html
@@ -83,11 +83,12 @@
 <div class='pts'>
 <h3>Responsibilities</h3>
 <ul>
-<li>Leading a dev team consisting of product manger, UI/UX designer, business analyst, and 8 local and remote developers.</li>
+<li>Leading a development and engineering team consisting of Lead Engineer, Product Manger, UI/UX Designer, Business Analyst, and 8 local and remote front-end and Ruby developers.</li>
 <li>Leading research and implementation of technology solutions with focus on user experience, sustainability, and cost efficiency.</li>
 <li>Coordinate with departments and business units on technology needs and solution.</li>
 <li>Building and managing our data pipeline for quality data collection and integrity.</li>
 <li>Managing data collection, visualization, and analysis for business intelligence, accounting, platform usage, and marketing flows & initiatives.</li>
+<li>Directing and advising DevOps and Engineering decisions to keep our properties running smoothly and efficiently.</li>
 </ul>
 <h3>Projects</h3>
 <ul>
@@ -196,6 +197,7 @@
 <li>This experience allowed me to work with APIs, data modeling, and diverse platforms & integrations.</li>
 <li>I love solving problems and finding the most I can get out of the data and tools available.</li>
 <li>Building out customer management systems, and marketing workflows for over a million contacts.</li>
+<li>Worked in many engineering development flows and project management methodologies.</li>
 </ul>
 </div>
 <div class='experience'>
@@ -243,7 +245,7 @@
 <li>12+ years of video filming and editing.</li>
 <li>Color correction experience with RAW, PRORES, and H.264 video.</li>
 <li>Steadicam, crane operation, drone piloting.</li>
-<li>RAW video workflow with Blackmagic, Davinci Resolve, FCP, & Adobe Creative Suite.</li>
+<li>Video workflow in Blackmagic, Davinci Resolve, FCP, & Adobe Suite.</li>
 <li>Motion Graphics animation with Adobe After Effects & Cinema4D.</li>
 <li>Phtography and Lightroom photo editing.</li>
 <li>Photoshop, Illustrator, InDesign for layout and logo design.</li>
