--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <head>
 <meta charset='utf-8'>
 <meta charset='X-UA-Compatible' content='IE=edge,chrome=1'>
-<title>Nathan Pruzaniec - Technologist</title>
-<meta content='' name='description'>
+<title>Nathan Pruzaniec, Technologist - Resume</title>
+<meta content='Throughout my experience as a creative leader, I’ve had the opportunity to work across a diverse range of areas including web development, technology research, and media creation. My passion is to create, bring talented people together, and build and grow MVPs. I seek to understand technology and potential solutions to the fullest so I can effectively synthesize concepts and teach it to others. I value using industry standards and pre-built &amp; open source tools while collaborating with others to learn from their experiences. I believe finding the right combination of people, technology and culture can accelerate any honest vision.' name='description'>
 <meta content='width=device-width' name='viewport'>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;display=swap' rel='stylesheet'>
 <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -30,7 +30,7 @@
 </div>
 <div class='header-section about text-center'>
 <div class='interests'>
-<h3>Technologist • Developer • Data Curator • Endlessly Curious</h3>
+<h3>Technologist • Engineer • Data Specialist • Endlessly Curious</h3>
 </div>
 <div class='location'>
 <h2>Redding, CA</h2>
@@ -58,7 +58,7 @@
 <a class='button' href='mailto:nathan@pru.design' target='_blank'>Contact Me</a>
 </div>
 <div class='about-copy'>
-<p>Through my broad experiences in leadership, development, technology research, and media creation I have had the opportunity to lead in diverse areas of Creativity. I love to create, to bring talented people together, organize efforts, prioritize needs, build MVPs and grow them, and bring out the best in those around me. I love understanding things to their fullest so I can get the most out of everything and teach it to others. I value using standards, pre-built and open source tools, and collaborating with others to learn from their experiences. Finding the right combination of people, technology, and culture can accelerate any vision. Drop me an email, I would love to talk about what you're building.</p>
+<p>Throughout my experience as a creative leader, I’ve had the opportunity to work across a diverse range of areas including web development, technology research, and media creation. My passion is to create, bring talented people together, and build and grow MVPs. I seek to understand technology and potential solutions to the fullest so I can effectively synthesize concepts and teach it to others. I value using industry standards and pre-built & open source tools while collaborating with others to learn from their experiences. I believe finding the right combination of people, technology and culture can accelerate any honest vision.</p>
 </div>
 </section>
 <section id='work'>
@@ -83,18 +83,18 @@
 <div class='pts'>
 <h3>Responsibilities</h3>
 <ul>
-<li>Leading a development and engineering team consisting of Lead Engineer, Product Manger, UI/UX Designer, Business Analyst, and 8 local and remote front-end and Ruby developers.</li>
-<li>Leading research and implementation of technology solutions with focus on user experience, sustainability, and cost efficiency.</li>
-<li>Coordinate with departments and business units on technology needs and solution.</li>
-<li>Building and managing our data pipeline for quality data collection and integrity.</li>
-<li>Managing data collection, visualization, and analysis for business intelligence, accounting, platform usage, and marketing flows & initiatives.</li>
-<li>Directing and advising DevOps and Engineering decisions to keep our properties running smoothly and efficiently.</li>
+<li>Leading a web development and engineering team consisting of Lead Engineer, Product Manger, UI/UX Designer, Business Analyst, and 8 local and remote Front-End and Ruby Developers</li>
+<li>Leading research and implementation of technology solutions with focus on user experience, sustainability, and cost efficiency</li>
+<li>Coordinating with departments and business units on technology needs and solutions</li>
+<li>Building and managing the data pipeline for quality data collection and integrity</li>
+<li>Managing data collection, visualization, and analysis for business intelligence, accounting, platform usage, and marketing flows & initiatives</li>
+<li>Directing and advising DevOps and Engineering decisions to keep our properties running smoothly and efficiently</li>
 </ul>
 <h3>Projects</h3>
 <ul>
-<li><strong>Custom Donations Platform</strong> - <span class="small-text">Led the vision and scope for a custom donations platform which allowed our existing users to very simply donate, setup recurring donation, and manage donation history and preferences. <a href="https://www.bethel.tv/give"  taget="_blank">[&nbsp;bethel.tv/give&nbsp;]</a></span></li>
-<li><strong>Multi-Lingual Podcast Platform</strong> - <span class="small-text">Directed the administrative, design, and development of a podcast platform to support 14 languages with industry standard feeds and analytics. <a href="https://www.bethel.tv/podcasts" taget="_blank">[&nbsp;bethel.tv/podcasts&nbsp;]</a></span></li>
-<li><strong>Data Repository and Visualization</strong> - <span class="small-text">Built a data pipeline from the way our databases are structured, to our ETL, data store, and vizualization and dashboards with Tableau products.</span></li>
+<li><strong>Custom Donations Platform</strong> - <span class="small-text">Led the vision and scope for a custom donations platform which allowed our existing users to very simply donate, set-up recurring donation, and manage donation history and preferences <a href="https://www.bethel.tv/give"  taget="_blank">[&nbsp;bethel.tv/give&nbsp;]</a></span></li>
+<li><strong>Multi-Lingual Podcast Platform</strong> - <span class="small-text">Directed the administration, design, and development of a podcast platform to support 14 languages with industry standard feeds and analytics <a href="https://www.bethel.tv/podcasts" taget="_blank">[&nbsp;bethel.tv/podcasts&nbsp;]</a></span></li>
+<li><strong>Data Repository and Visualization</strong> - <span class="small-text">Built the data pipeline including database structures, ETL set-up, data store management, and vizualizations & dashboards with Tableau products</span></li>
 </ul>
 </div>
 </div>
@@ -116,16 +116,16 @@
 </div>
 <div class='pts'>
 <ul>
-<li>Building a media company called The Beauty Project which includes the website, producing photography and video, and planning the brand vision, mission and campaigns. <a href="https://thebeautyproject.is" taget="_blank">[&nbsp;thebeautyproject.is&nbsp;]</a></li>
-<li>Consulting businesses on technology solutions for their online presence, e-commerce, and internal systems to run and manage their business.</li>
-<li>Building websites and managing SEO for businesses including blogging, ecommerce, subscription, POS, and digital delivery tools.</li>
-<li>Creating media including photography & editing, video directing and editing, logo design & user interface design, and podcast production.</li>
+<li>Building a media company called The Beauty Project which includes the website, producing photography & video, and planning the brand vision, mission, and campaigns. <a href="https://thebeautyproject.is" taget="_blank">[&nbsp;thebeautyproject.is&nbsp;]</a></li>
+<li>Consulting businesses on technology solutions for their online presence, e-commerce, and internal systems to manage their business</li>
+<li>Building websites and managing SEO for businesses including blogging, ecommerce, subscriptions, POS, and digital delivery tools</li>
+<li>Creating media including photography & editing, video directing & editing, logo design & user interface design, and podcast production</li>
 </ul>
 <h3>Projects</h3>
 <ul>
-<li><strong>Technology Consulting</strong> - <span class="small-text">Helping organizations find ways to increase their potential with the resources at hand is one of my passions. More is always possible with what's in front of you. Consulting has given me the opportunity to advise on building complex solutions with simple tools.</span></li>
-<li><strong>Video Production</strong> - <span class="small-text">Thgrough 12+ years of video experience I have told people and organization's stories through documentary shorts, animated promo videos, and live production.</span></li>
-<li><strong>Website Development</strong> - <span class="small-text">Offering affordable, flexible, and fully custom websites to new companies, or companies trying to refresh their identity. Producing quality that is attainable for any business has been very rewarding. <a href="https://www.homeagainpinebluff.org" taget="_blank">[&nbsp;homeagainpinebluff.org&nbsp;]</a></span></li>
+<li><strong>Technology Consulting</strong> - <span class="small-text">Helping organizations find ways to increase their potential with their available resources. Consulting has given me the opportunity to advise on building complex solutions with simple tools.</span></li>
+<li><strong>Video Production</strong> - <span class="small-text">Crafting individual and organization's stories through documentary shorts, animated promo videos, and live production through my 12+ years of video experience</span></li>
+<li><strong>Website Development</strong> - <span class="small-text">Developing fully custom websites for new companies and existing companies refreshing their identity <a href="https://www.homeagainpinebluff.org" taget="_blank">[&nbsp;homeagainpinebluff.org&nbsp;]</a></span></li>
 </ul>
 </div>
 </div>
@@ -147,16 +147,16 @@
 </div>
 <div class='pts'>
 <ul>
-<li>Developed web and app based resources to facilitate the operations and membership needs for 12 locations across the state.</li>
-<li>Researched and implemented live streaming solutions for services, events, and conferences.</li>
-<li>Scoped, implemented, and trained hundreds of staff and volunteers on internal database management, operations, and integrity. I oversaw the inital data migration from the legacy tool which involved very detailed accounting data integrity needs.</li>
-<li>Developed and managed podcast platform for distributing weekly audio content with coordinated reading content and group membership to facilitate teaching.</li>
+<li>Developed web and app based resources to facilitate the operations and membership needs for 12 locations across the state</li>
+<li>Researched and implemented live streaming solutions for events and conferences</li>
+<li>Scoped, implemented, and trained hundreds of staff and volunteers on internal database management, operations, and integrity while overseeing the inital data migration from the legacy tool which involved very detailed accounting data integrity needs</li>
+<li>Developed and managed podcast platform for distributing weekly audio content with coordinated reading content and group membership to facilitate teaching</li>
 </ul>
 <h3>Projects</h3>
 <ul>
-<li><strong>NLC App</strong> - <span class="small-text">Built an app to deliver video, podcast, event info, event registration, articles, and live streaming for iOS, Android, and AppleTV using an app building tool connected to our site's CMS via JSON APIs. [ No longer available. ]</span></li>
-<li><strong>Internal Database</strong> - <span class="small-text">This was a huge undertaking of migrating years of memebership and donation data from a legacy system, and training staff and volunteers across many geographic locations on usage and reporting.</span></li>
-<li><strong>Media RAID</strong> - <span class="small-text">Through my experience with video editing, I oversaw the purchase and implementation of a large RAID for media storage and video editing which included planning the network segmentation, physical network wiring and 10Gbe hardware, permissions, and organization of the content. This build facilitated the work of 4 video editors, 3 graphic designers, and many support staff.</span></li>
+<li><strong>NLC App</strong> - <span class="small-text">Designed and engineered an app to deliver video, podcast, event info, event registration, articles, and live streaming for iOS, Android, and AppleTV using an app building tool connected to our site's CMS via JSON APIs [&nbsp;No longer available.&nbsp;]</span></li>
+<li><strong>Internal Database</strong> - <span class="small-text">Migrating years of memebership and donation data from a legacy system, and training staff & volunteers across many geographic locations on usage and reporting</span></li>
+<li><strong>Media RAID</strong> - <span class="small-text">Oversaw the purchase and implementation of a large RAID for media storage and video editing which included planning the network segmentation, physical network wiring & 10GbE hardware, permissions, and organization of the content to facilitate the work of 4 video editors, 3 graphic designers, and many support staff</span></li>
 </ul>
 </div>
 </div>
@@ -165,7 +165,7 @@
 <section id='experience'>
 <div class='section-title'>
 <h1>Experience</h1>
-<p>Thse are areas I have invested in learning through work experience, research, and general curiosity and hobbying.</p>
+<p>Areas I have invested in learning through work experience, research, and general curiosity</p>
 </div>
 <div class='grid'>
 <div class='experience'>
@@ -178,10 +178,10 @@
 </div>
 <ul>
 <li>Through my broad media and development experience, I am able to lead many areas & skillsets with high rapport.</li>
-<li>I am skilled at teaching, traning, and sharing my experiences.</li>
-<li>I enjoy finding the balance and priorities needed to succeed in different projects.</li>
-<li>Creating a culture of enthusiasm and dreaming alongside excellence and responsibility.</li>
-<li>Hiring and vetting candidates for developer, creative, and administrative roles.</li>
+<li>I am skilled at teaching, training, and sharing my experiences.</li>
+<li>I enjoy finding the balance of priorities needed to succeed in different projects.</li>
+<li>Creating a culture of enthusiasm and dreaming alongside excellence and responsibility</li>
+<li>Hiring and vetting candidates for developer, creative, and administrative roles</li>
 </ul>
 </div>
 <div class='experience'>
@@ -193,11 +193,11 @@
 <h2 class='title'>Developer</h2>
 </div>
 <ul>
-<li>I started with front-end development & PHP 8 years ago.</li>
+<li>I started with front-end web development & PHP 8 years ago.</li>
 <li>This experience allowed me to work with APIs, data modeling, and diverse platforms & integrations.</li>
-<li>I love solving problems and finding the most I can get out of the data and tools available.</li>
-<li>Building out customer management systems, and marketing workflows for over a million contacts.</li>
-<li>Worked in many engineering development flows and project management methodologies.</li>
+<li>I value solving problems and finding the most I can get out of the data and tools available.</li>
+<li>Building out customer management systems and marketing workflows for over a million contacts</li>
+<li>Worked in many engineering development flows and project management methodologies</li>
 </ul>
 </div>
 <div class='experience'>
@@ -209,11 +209,11 @@
 <h2 class='title'>Data</h2>
 </div>
 <ul>
-<li>Managing data pipeline with ETL + Google Big Query.</li>
-<li>Doing data cleaning & validation with Trifacta, Tableau Prep, & Tableau Desktop.</li>
-<li>Data reporting, analysis, and visualization with Tableau Desktop.</li>
-<li>Working on data migration and database structuring projects for large applications.</li>
-<li>Managing a contact database of over 50 million contacts.</li>
+<li>Managing data pipeline with ETL + Google Big Query</li>
+<li>Cleaning & validating data with Trifacta, Tableau Prep, and Tableau Desktop</li>
+<li>Data reporting, analysis, and visualization with Tableau Desktop</li>
+<li>Working on data migration and database structuring projects for large applications</li>
+<li>Managing a contact database of over 50 million contacts</li>
 </ul>
 </div>
 <div class='experience'>
@@ -225,12 +225,12 @@
 <h2 class='title'>Technology</h2>
 </div>
 <ul>
-<li>Deep understanding of internet technology and the way content is built and delivered.</li>
-<li>Understanding of the browser policy, web page interpretation, and security protocols.</li>
-<li>Understanding of the hardware, protocols, and mitigations to attacks the internet runs on.</li>
-<li>Love for knowing how computers work down to the hardware.</li>
-<li>Experience with software/hardware virtualization.</li>
-<li>CDNs, conatiners, streaming, analytics, and security.</li>
+<li>Deep understanding of internet technology and the way content is built and delivered</li>
+<li>Understanding of browser policy, web page interpretation, and security protocols</li>
+<li>Understanding of the hardware, protocols, and mitigations to attacks the internet runs on</li>
+<li>Love for knowing how computers work down to the hardware</li>
+<li>Experience with software/hardware virtualization</li>
+<li>CDNs, conatiners, streaming, analytics, and security</li>
 </ul>
 </div>
 <div class='experience'>
@@ -242,14 +242,13 @@
 <h2 class='title'>Media</h2>
 </div>
 <ul>
-<li>12+ years of video filming and editing.</li>
-<li>Color correction experience with RAW, PRORES, and H.264 video.</li>
-<li>Steadicam, crane operation, drone piloting.</li>
-<li>Video workflow in Blackmagic, Davinci Resolve, FCP, & Adobe Suite.</li>
-<li>Motion Graphics animation with Adobe After Effects & Cinema4D.</li>
-<li>Phtography and Lightroom photo editing.</li>
-<li>Photoshop, Illustrator, InDesign for layout and logo design.</li>
-<li>Sketch and Figma for UI/UX wireframing and design.</li>
+<li>12+ years of video filming and editing</li>
+<li>Color correction experience with RAW, PRORES, and H.264 video</li>
+<li>Video workflow in Blackmagic, Davinci Resolve, FCP, and Adobe Suite</li>
+<li>Motion Graphics animation with Adobe After Effects and Cinema4D</li>
+<li>Phtography and Lightroom photo editing</li>
+<li>Photoshop, Illustrator, and InDesign for layout & logo design</li>
+<li>Sketch and Figma for UI/UX wireframing & design</li>
 </ul>
 </div>
 <div class='experience'>
@@ -261,12 +260,12 @@
 <h2 class='title'>Security/Infosec</h2>
 </div>
 <ul>
-<li>10+ years of researching and studying computer and network security.</li>
-<li>Information security and data encryption at rest, in transit, or for authentication.</li>
-<li>User authentication, database technology, and authentication methods including 2FA, OAth, SQRL, etc.</li>
-<li>Secure hashing and encryption protocols and best practices.</li>
-<li>Intrusion prevention, training, detecting, and hardening.</li>
-<li>Security industry news, standards, and technology.</li>
+<li>10+ years of researching and studying computer & network security</li>
+<li>Information security and data encryption at rest, in transit, and for authentication</li>
+<li>User authentication, database technology, and authentication methods including 2FA, OATH, SQRL, etc.</li>
+<li>Secure hashing and encryption protocols & best practices</li>
+<li>Intrusion prevention, training, detecting, and infrastructure hardening</li>
+<li>Security industry news, standards, and technology</li>
 </ul>
 </div>
 </div>
