--- a/index.html
+++ b/index.html
@@ -16,15 +16,21 @@
 <link href='sass/styles.css' rel='stylesheet'>
 </head>
 <body>
+<div class='no-print' id='notice'>
+<a class='notice-wrap' href='files/Nathan_Pruzaniec-Resume.pdf' target='_blank'>
+<div class='notice-text'>Click to <strong>download</strong> PDF or [ CMD/CTRL + P ] to <strong>print</strong></div>
+</a>
+</div>
+<div class='content'>
 <section id='header'>
 <div class='header-wrap flex'>
 <div class='header-section me'>
 <div class='name'>
 <h1>Nathan Pruzaniec</h1>
 </div>
-<div class='link'>
+<div class='link no-print'>
 <h2>
-<a href='https://www.linkedin.com/in/npruzaniec'>linkedin.com/in/npruzaniec</a>
+<a href='https://www.linkedin.com/in/npruzaniec' target='_blank'>linkedin.com/in/npruzaniec</a>
 </h2>
 </div>
 </div>
@@ -270,15 +276,16 @@
 </div>
 </div>
 </section>
-<section class='flex' id='contact'>
+<section class='flex no-print' id='contact'>
 <a class='button large' href='mailto:nathan@pru.design' target='_blank'>Contact Me</a>
 </section>
-<section id='references'>
+<section class='no-print' id='references'>
 <div class='section-title'>
 <h1>References</h1>
 <p>Available upon request.</p>
 </div>
 </section>
+</div>
 </body>
 <script src='js/app.js'></script>
 </html>
