tweak print styles

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div class='name'>
 <h1>Nathan Pruzaniec</h1>
 </div>
-<div class='link no-print'>
+<div class='link'>
 <h2>
 <a href='https://www.linkedin.com/in/npruzaniec' target='_blank'>linkedin.com/in/npruzaniec</a>
 </h2>
@@ -61,7 +61,7 @@
 <section id='about'>
 <div class='section-title'>
 <h1>About</h1>
-<a class='button' href='mailto:nathan@pru.design' target='_blank'>Contact Me</a>
+<a class='button no-print' href='mailto:nathan@pru.design' target='_blank'>Contact Me</a>
 </div>
 <div class='about-copy'>
 <p>Throughout my experience as a creative leader, I’ve had the opportunity to work across a diverse range of areas including web development, technology research, and media creation. My passion is to create, bring talented people together, and build and grow MVPs. I seek to understand technology and potential solutions to the fullest so I can effectively synthesize concepts and teach it to others. I value using industry standards and pre-built & open source tools while collaborating with others to learn from their experiences. I believe finding the right combination of people, technology and culture can accelerate any honest vision.</p>
