update project experience

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 <h3>Projects</h3>
 <ul>
 <li><strong>Technology Consulting</strong> - <span class="small-text">Helping organizations find ways to increase their potential with their available resources. Consulting has given me the opportunity to advise on building complex solutions with simple tools.</span></li>
-<li><strong>Website Development</strong> - <span class="small-text">Developing fully custom websites for new companies and existing companies refreshing their identity <a href="https://www.homeagainpinebluff.org" taget="_blank">[&nbsp;homeagainpinebluff.org&nbsp;]</a></span></li>
+<li><strong>Website Development</strong> - <span class="small-text">Building sites, marketing pages, and working on page frameworks to speed up future projects.  <a href="https://closet.gwynniebee.com" taget="_blank">[&nbsp;gwynniebee.com&nbsp;]</a></span></li>
 <li><strong>Video Production</strong> - <span class="small-text">Crafting individual and organization's stories through documentary shorts, animated promo videos, and live production throughout my 12+ years of video experience</span></li>
 </ul>
 </div>
