fixing some copy

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <ul>
 <li>Leading a web development and engineering team consisting of Lead Engineer, Product Manger, UI/UX Designer, Business Analyst, and 8 local and remote Front-End, Ruby on Rails, & React Developers</li>
 <li>Leading research and implementation of technology solutions with focus on user experience, sustainability, and cost efficiency</li>
-<li>Overseeing ecommerce platform and connected logistics tools for accounting, inventory, fulfillment, and point-of-sale</li>
+<li>Overseeing e-commerce platform and connected logistics tools for accounting, inventory, fulfillment, and point-of-sale</li>
 <li>Overseeing data policies and CRM implementation and integrations</li>
 <li>Vetting and hiring qualified team members from design to engineering</li>
 <li>Building and managing the data pipeline for quality data collection, reporting, and integrity</li>
@@ -124,8 +124,8 @@
 <ul>
 <li>Building a media company called the Beauty Project which includes website planning and development, overseeing, and executing media campaigns. <a href="https://thebeautyproject.is" taget="_blank">[&nbsp;thebeautyproject.is&nbsp;]</a></li>
 <li>Consulting businesses on technology solutions for their online presence, e-commerce, and internal systems to manage their business</li>
-<li>Building websites, researching and managing SEO including blogging, ecommerce, subscriptions, POS, digital delivery tools, structured data, and more</li>
-<li>Manging creative projects, workflows, and teams through media capture, post-production, and publishing</li>
+<li>Building websites, researching and managing SEO including blogging, e-commerce, subscriptions, POS, digital delivery tools, structured data, and more</li>
+<li>Managing creative projects, workflows, and teams through media capture, post-production, and publishing</li>
 </ul>
 <h3>Projects</h3>
 <ul>
@@ -156,7 +156,7 @@
 <li>Developed web and app based resources to facilitate the operations and membership needs for 12 locations across the state</li>
 <li>Developed and managed podcast platform for distributing weekly audio content with coordinated reading content and group membership to facilitate teaching</li>
 <li>Researched and implemented live streaming solutions for events and conferences</li>
-<li>Scoped, implemented, and trained hundreds of staff and volunteers on internal database management, operations, and integrity while overseeing the inital data migration from the legacy tool which involved very detailed accounting data integrity needs</li>
+<li>Scoped, implemented, and trained hundreds of staff and volunteers on internal database management, operations, and integrity while overseeing the initial data migration from the legacy tool which involved very detailed accounting data integrity needs</li>
 </ul>
 <h3>Projects</h3>
 <ul>
