fixing some copy

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 <li>Team and project management from inception through production</li>
 <li>Leading product UI/UX wireframing and design with Sketch and Figma</li>
 <li>Motion Graphics animation with Adobe After Effects and Cinema4D</li>
-<li>Phtography and Lightroom photo editing</li>
+<li>Photography and Lightroom photo editing</li>
 <li>Photoshop, Illustrator, and InDesign</li>
 </ul>
 </div>
